--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 	<head>
 		<title>Pocket Reads</title>
     <meta charset="UTF-8">
-		<script type="text/javascript" src="js/ICanHaz.js"></script> 
+		<script type="text/javascript" src="js/ICanHaz.js"></script>
 		<script type="text/javascript" src='js/jquery.js '></script>
     <script type="text/javascript" src='js/tabletop.js'></script>
     <script type="text/javascript" src='js/site.js'></script>
 		<script type="text/javascript" src='js/sheetsee.js'></script>
-    
+
 		<link rel="shortcut icon" href="https://raw.github.com/jlord/sheetsee-pocket/master/favicon-p.png"/>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-		<link media="screen" rel="stylesheet" type="text/css" href="css/style.css"> 
+		<link media="screen" rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 <body>
 	<div id="wrapper">
@@ -24,8 +24,8 @@
 
 		<div id="filters" class="container">
 			<input id="articleSearch" type="text" placeholder="Search for.."></input>
-			<span class="clear sml-button">Clear</span> 
-      <h3>Tags <span id="tags"></span>   
+			<span class="clear sml-button">Clear</span>
+      <h3>Tags <span id="tags"></span>
     </div>
 
 		<div id="articleTable"></div>
@@ -34,7 +34,8 @@
       <h2>INFO</h2>
       <p>This is an open source, easy to replicate project by <a href="http://www.twitter.com/jllord" target="_blank">@jllord</a>. If you use <a href="http://www.getpocket.com" target="_blank">Pocket</a> to save articles for later, you can also use <a href="http://www.ifttt.com" target="_blank">ifttt.com</a> (if this than that) to automate sending the article details to a Google Spreadsheet once you've archived it. Once you have a Google Spreadsheet you can use <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a> to turn into a website like so. So many possibilities! See the <a href="http://www.github.com/jlord/sheetsee-pocket#hi" target="_blank">documentation</a> to learn how to set up your own or contribute code!</p>
     </div>
-	</div><!-- end wrapper -->
+	</div>
+	<!-- end wrapper -->
 
 	<script id="title" type="text/html">
 		<h1><span class="highlighted">{{numArticles}}</span> Articles from Pocket</h1>
@@ -58,10 +59,10 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      var URL = "17FWBzJhnEKqO0wkbyzNzDNMatyRJhwmC6BCVsFaZ0oU"
+      var URL = "17FWBzJhnEKqO0wkbyzNzDNMatyRJhwmC6BCVsFaZ0oU/pubhtml"
       Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
-    }) 
-      
+    })
+
     function showInfo(data) {
       var gData = separateTags(data)
       drawTags(gData)
