--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Bookmarks</title>
+		<title>Pocket Reads</title>
     <meta charset="UTF-8">
 		<script type="text/javascript" src="js/ICanHaz.js"></script>
 		<script type="text/javascript" src='js/jquery.js '></script>
@@ -34,8 +34,7 @@
       <h2>INFO</h2>
       <p>This is an open source, easy to replicate project by <a href="http://www.twitter.com/jllord" target="_blank">@jllord</a>. If you use <a href="http://www.getpocket.com" target="_blank">Pocket</a> to save articles for later, you can also use <a href="http://www.ifttt.com" target="_blank">ifttt.com</a> (if this than that) to automate sending the article details to a Google Spreadsheet once you've archived it. Once you have a Google Spreadsheet you can use <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a> to turn into a website like so. So many possibilities! See the <a href="http://www.github.com/jlord/sheetsee-pocket#hi" target="_blank">documentation</a> to learn how to set up your own or contribute code!</p>
     </div>
-	</div>
-	<!-- end wrapper -->
+	</div><!-- end wrapper -->
 
 	<script id="title" type="text/html">
 		<h1><span class="highlighted">{{numArticles}}</span> Articles from Pocket</h1>
@@ -59,7 +58,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      var URL = "17FWBzJhnEKqO0wkbyzNzDNMatyRJhwmC6BCVsFaZ0oU"
+      var URL = "0Ao5u1U6KYND7dERheVpFZThEUkdPZnFXXzMxTzJ3dEE"
       Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
     })
 
@@ -70,7 +69,6 @@
       pageTitle(gData)
       Sheetsee.makeTable(gData.reverse(), "#articleTable")
       Sheetsee.initiateTableFilter(gData, "#articleSearch", "#articleTable")
-
       $(document).on("click", ".tag", function(event){
         var tag = $(event.target).text()
         var tagFilter = getTagMatches(gData, tag)
